--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -69,7 +69,7 @@
     <env-entry>
         <env-entry-name>webmail-lab9-username</env-entry-name>
         <env-entry-type>java.lang.String</env-entry-type>
-        <env-entry-value>cprg352.lab9.kpatel@gmail.com</env-entry-value>
+        <env-entry-value>cprg352.lab9.kpatel1@gmail.com</env-entry-value>
     </env-entry>
     <env-entry>
         <env-entry-name>webmail-lab9-password</env-entry-name>
